project transition animation

--- a/css/modules/_skills.scss
+++ b/css/modules/_skills.scss
@@ -26,7 +26,7 @@
 }
 
 .skills__block {
-  animation-duration: 2.5s;
-  animation-delay: 1s;
+  // animation-duration: 2.5s;
+  // animation-delay: 1s;
 
 }
