--- a/css/modules/_projects.scss
+++ b/css/modules/_projects.scss
@@ -1,4 +1,3 @@
-
 .project__wrapper {
   // padding-top: 70px;
   display: flex;
@@ -10,33 +9,22 @@
 
 .project__block {
   width: 300px;
-  text-align: center;
-  animation-duration: 2s;
-  animation-delay: .25s;
-
-
+  text-align: center; // animation-duration: 2s;
+  // animation-delay: .25s;
   h3 {
     margin: 3px;
   }
-
   a:link {
     text-decoration: none;
   }
-
 }
-
-
-
-
-
-
 
 .project-thumbnails {
   background-color: white;
   width: 250px;
   height: 200px;
   border-radius: 25px;
-
+  transition: all 0.2s;
   &:hover {
     width: 260px;
     height: 210px;
@@ -45,5 +33,4 @@
   &:link {
     text-decoration: none;
   }
-
 }
