--- a/styles.css
+++ b/styles.css
@@ -3712,8 +3712,6 @@ a:active {
 .project__block {
   width: 300px;
   text-align: center;
-  animation-duration: 2s;
-  animation-delay: .25s;
 }
 .project__block h3 {
   margin: 3px;
@@ -3727,6 +3725,7 @@ a:active {
   width: 250px;
   height: 200px;
   border-radius: 25px;
+  transition: all 0.2s;
 }
 .project-thumbnails:hover {
   width: 260px;
@@ -3758,11 +3757,6 @@ a:active {
   width: 50px;
   height: 50px;
   padding: 5px;
-}
-
-.skills__block {
-  animation-duration: 2.5s;
-  animation-delay: 1s;
 }
 
 .education__wrapper {
