--- a/styles.css
+++ b/styles.css
@@ -3569,7 +3569,10 @@ body {
 .section-title {
   text-align: center;
   letter-spacing: 5px;
-  padding: 5px 0px 5px 0px;
+  padding: 100px 0px 20px 0px;
+}
+.section-title h1 {
+  margin: 0;
 }
 
 .sticky-header {
@@ -3636,6 +3639,7 @@ body {
   letter-spacing: 10px;
   padding-left: 10px;
   font-size: 1.2rem;
+  transition: all 0.2s;
 }
 
 .subtitle a:link,
@@ -3656,7 +3660,7 @@ a:active {
 }
 
 .about {
-  padding-top: 40px;
+  padding-top: 10px;
   	/* display: flex;
     flex-direction: row; */
   /* justify-content: center; */
