add small project icons

--- a/css/modules/_projects.scss
+++ b/css/modules/_projects.scss
@@ -34,3 +34,10 @@
     text-decoration: none;
   }
 }
+
+.project-skills-images {
+  background-color: white;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+}
