--- a/styles.css
+++ b/styles.css
@@ -3740,6 +3740,13 @@ a:active {
   text-decoration: none;
 }
 
+.project-skills-images {
+  background-color: white;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+}
+
 .skills {
   display: flex;
   flex-flow: wrap;
@@ -3758,6 +3765,8 @@ a:active {
   }
 }
 .skills-images {
+  background-color: black;
+  border-radius: 25%;
   width: 50px;
   height: 50px;
   padding: 5px;
