--- a/styles.css
+++ b/styles.css
@@ -3743,8 +3743,14 @@ a:active {
 .project-skills-images {
   background-color: white;
   border-radius: 50%;
+  border-color: 4px solid black;
   height: 25px;
   width: 25px;
+}
+.project-skills-images--grey {
+  height: 26px;
+  width: 26px;
+  background-color: #323232;
 }
 
 .skills {
