--- a/css/base/_global.scss
+++ b/css/base/_global.scss
@@ -3,20 +3,23 @@
 @import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700");
 body {
   background-color: black;
-  margin: 0;
   color: white;
   font-family: "Montserrat", sans-serif;
+  max-width: 2800px;
+  min-width: 300px;
+  width: 100%;
+  margin: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .section-title {
   text-align: center;
-	letter-spacing: 5px;
-	
-	padding: 100px 0px 20px 0px; 
-	h1 {
-		margin: 0;
-	}
-	// &--about {
+  letter-spacing: 5px;
+  padding: 100px 0px 20px 0px;
+  h1 {
+    margin: 0;
+  } // &--about {
   //   animation-duration: 2.5s;
   //   animation-delay: 2s;
   // }
