--- a/css/base/_global.scss
+++ b/css/base/_global.scss
@@ -8,7 +8,7 @@ body {
 	max-width: 2800px;
 	min-width: 300px;
 	width: 100%;
-	margin: auto;
+	margin: 0;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
