--- a/css/base/_global.scss
+++ b/css/base/_global.scss
@@ -8,7 +8,8 @@ body {
 	max-width: 2800px;
 	min-width: 300px;
 	width: 100%;
-	margin: 0;
+  margin: 0;
+  padding: 0px;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
