--- a/css/modules/_lightbox.scss
+++ b/css/modules/_lightbox.scss
@@ -1,19 +1,25 @@
 .lightbox-modal {
-  width: 90%;
-  margin: auto;
-  border-radius: 25px;
-  margin: auto;
-  color: black;
-  font-size: 1.2rem;
-  font-family: "Montserrat", sans-serif;
+	width: 85%;
+	margin: auto;
+	border-radius: 25px;
+	margin: auto;
+	color: black;
+	font-size: 1.2rem;
+	font-family: "Montserrat", sans-serif;
+	&__text {
+		width: 100%; // padding-left: 20px;
+		strong {
+			font-weight: 700;
+		}
+	}
+	&:link {
+		text-decoration: none;
+	}
+}
 
-  &__text {
-    width: 100%; // padding-left: 20px;
-    strong {
-      font-weight: 700;
-    }
-  }
-  &:link {
-    text-decoration: none;
-  }
+.project-image {
+	max-width: 500px;
+	width: 100%;
+	float: left;
+	padding: 20px;
 }
